# osai-kube-storage-gateway

./: README.md  todo.org
configs/: docker-compose.dev.yaml  migration-runner-set-env.sh  pg-init-storage-gateway.sh  storage-gateway-config.yaml
example-secrets/: environment.ini  storage-gateway-config.yaml
scripts/: alias-docker-compose.sh  delete-pgdata.sh  dev.sh  docker-compose.dev.yaml  log.sh  set_environment_variables.sh  status.sh
storage-gateway/: Cargo.toml  Dockerfile.dev  Dockerfile.migration-runner
storage-gateway/src/: api.rs  lib.rs  main.rs  models.rs  tests.rs
storage-gateway/src/api/: objects.rs
storage-gateway/src/models/: objects.rs
