[package]
name = "storage-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-rt = "2.9.0"
actix-web = "4.4.0"
cloud-storage = "0.10"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "extras"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.189"
serde_json = "1.0.107"
serde_yaml = "0.8"
thiserror = "1.0.50"
